# code-agent

./: .env.example  .git-blame-ignore-revs  .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  ruff.yml
baseline/claude-code/: package.json  server.js  vite.config.ts
baseline/claude-code/src/: App.tsx
baseline/claude-code/src/components/: BackButton.tsx  CategoryNav.tsx  PaperDetail.tsx
baseline/claude-code/src/pages/: HomePage.tsx  PaperPage.tsx
baseline/claude-code/src/services/: arxiv.ts
baseline/gemini/: README.md  package-lock.json  package.json  vite.config.ts
baseline/gemini/src/: App.tsx  index.css
baseline/gemini/src/components/: Layout.css  Layout.tsx  Navbar.tsx  PaperDetail.css  PaperDetail.tsx  PaperList.css
baseline/gemini/src/services/: arxivApi.ts
baseline/gemini/src/types/: index.ts
code-agent/claude-sonnet-4.5/: DEPLOYMENT.md  vite.config.js
code-agent/claude-sonnet-4.5/src/: App.jsx  index.css
code-agent/claude-sonnet-4.5/src/components/: Navigation.css  Navigation.jsx
code-agent/deepseek-v3/: package.json
code-agent/deepseek-v3/src/: App.tsx
code-agent/deepseek-v3/src/components/: CitationTools.tsx  NavigationBar.tsx
code-agent/deepseek-v3/src/pages/: PaperDetailPage.tsx
code-agent/deepseek-v3/src/services/: arxivService.ts
code-agent/qwen3-coder-plus/: .env.example  index.html  vite.config.js
code-agent/qwen3-coder-plus/src/: App.jsx
code-agent/qwen3-coder-plus/src/layout/: Footer.jsx  Header.jsx  LoadingSpinner.jsx
code-agent/qwen3-coder-plus/src/pages/: CategoriesPage.css
code-agent/qwen3-coder-plus/src/services/: arxivService.js
code-agent/qwen3-coder-plus/src/utils/: categories.js
code_agent/: __main__.py  config.py
code_agent/agent/: graph.py  human_in_the_loop.py  state.py  structured_output.py
code_agent/prompts/: agents.py  supervisor.py
code_agent/tools/: base.py  edit.py  file_ops.py  filesystem.py  grep.py  mcp_loader.py  planning.py  registry.py  search.py  shell.py  sub_agent.py
code_agent/ui/: app.py  commands.py  components.py
code_agent/utils/: event_bus.py  logger.py  path.py
examples/: README.md
examples/arxiv-cs-daily/: LICENSE  package.json
examples/arxiv-cs-daily/src/: App.css  App.jsx  index.css
examples/arxiv-cs-daily/src/hooks/: useArxivApi.js
examples/arxiv-cs-daily/src/layout/: LoadingSpinner.css
examples/arxiv-cs-daily/src/utils/: citationUtils.js
examples/baseline/claude-code/: README.md  index.html  package-lock.json
examples/baseline/claude-code/src/: App.tsx  main.tsx
examples/baseline/gemini/src/: App.css
examples/claude-sonnet-4.5/: IMPLEMENTATION_SUMMARY.md  PROJECT_OVERVIEW.md  README.md  index.html
examples/claude-sonnet-4.5/src/: App.css
examples/claude-sonnet-4.5/src/components/: CitationTools.css  CitationTools.jsx
examples/claude-sonnet-4.5/src/pages/: PaperList.jsx
examples/claude-sonnet-4.5/src/services/: arxivApi.js
examples/claude-sonnet-4.5/src/utils/: citations.js
examples/code-agent/claude-sonnet-4.5/: .gitignore  COMPLETION_SUMMARY.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TESTING_CHECKLIST.md  package-lock.json  package.json  vercel.json
examples/code-agent/deepseek-v3/: index.html  package-lock.json  vercel.json
examples/deepseek-v3/: netlify.toml
examples/deepseek-v3/api/: health.js
examples/deepseek-v3/server/: package-lock.json
examples/qwen3-coder-plus/: .gitignore  README.md  package-lock.json
landing/: .gitignore  next.config.ts  package-lock.json  package.json
landing/app/: globals.css  layout.tsx  page.tsx
report/: lib.typ  report.typ
scripts/: build-all.js
src/: __init__.py  config.py
src/agent/: context.py  graph.py  human_in_the_loop.py  state.py  structured_output.py
src/prompts/: __init__.py  agents.py  supervisor.py
src/tools/: base.py  edit.py  file_ops.py  filesystem.py  grep.py  mcp_loader.py  planning.py  registry.py  search.py  shell.py  sub_agent.py
src/ui/: app.py  components.py
src/utils/: event_bus.py  logger.py  path.py
(+52 files in other folders)
